force-app/main/default/objects/Round_Robin_Member__c/Round_Robin_Member__c.object-meta.xml
<CustomObject>
    <description>This is for individuals who belong to a round robin assignment</description>
    <label>Round Robin User</label>
    <nameField>
        <displayFormat>RRU-{0000}</displayFormat>
        <label>Round Robin Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Robin Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>