force-app/main/default/objects/Round_Robin_Member__c/fields/Out_of_Office_Start__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Office_Start__c</fullName>
    <formula>User__r.Out_Of_Office_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out of Office Start</label>
    <type>DateTime</type>
</CustomField>