force-app/main/default/objects/Round_Robin_Member__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
 Active__c = TRUE,
 IMAGE(&quot;/resource/1660869198000/GraphicsPackNew/fatcow/farmfresh/16/accept.png&quot;, &quot;Active&quot;),
 IMAGE(&quot;/resource/1660869198000/GraphicsPackNew/fatcow/farmfresh/16/cancel.png&quot;, &quot;Inactive&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>